--- a/amazon.html
+++ b/amazon.html
@@ -56,6 +56,8 @@
  
       </div>
     </div>
+
+    <script src="data/products.js"></script>
     <script src="javascript/amazon.js"></script>
   </body>
 </html>
