--- a/amazon.html
+++ b/amazon.html
@@ -57,6 +57,8 @@
       </div>
     </div>
 
+
+    <script src="data/carts.js"></script>
     <script src="data/products.js"></script>
     <script src="javascript/amazon.js"></script>
   </body>
