--- a/amazon.html
+++ b/amazon.html
@@ -58,9 +58,6 @@
       </div>
     </div>
 
-
-    <script src="data/carts.js"></script>
-    <script src="data/products.js"></script>
-    <script src="javascript/amazon.js"></script>
+    <script type="module" src="javascript/amazon.js"></script>
   </body>
 </html>
